--- a/localedit/manifest.json
+++ b/localedit/manifest.json
@@ -1,11 +1,7 @@
 {
   "name": "LocalEdit",
-  "description": "Locally edit other people's messages until restart.",
-  "authors": [
-    {
-      "name": "Imfcatfr"
-    }
-  ],
-  "main": "plugin.js",
-  "version": "1.0.0"
+  "description": "Locally edit other people's messages until restart",
+  "author": "Imfcatfr",
+  "version": "1.0.0",
+  "main": "plugin.js"
 }
