--- a/localedit/manifest.json
+++ b/localedit/manifest.json
@@ -1,7 +1,14 @@
 {
   "name": "LocalEdit",
-  "description": "Locally edit other people's messages until restart",
-  "author": "Imfcatfr",
-  "version": "1.0.0",
-  "main": "plugin.js"
+  "description": "Locally edit any message in your client, just for fun.",
+  "authors": [
+    {
+      "name": "Imfcatfr",
+      "id": "0" 
+    }
+  ],
+  "main": "plugin.js",
+  "vendetta": {
+    "icon": "ic_message_edit"
+  }
 }
